codex-rs/trace-tui/src/snapshots/codex_trace_tui__phase4_tests__phase4_entered_group.snap
---
source: trace-tui/src/phase4_tests.rs
expression: "render_app(&mut app, 110, 18)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000-000000000201 / collapsed / user
  NAME                                 KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE
▶•event · MessageContent               REC  user         —         2026-08-02T00:00:02Z ordinary semantic














jk h/l  Enter  Tab  ?                                                    collapsed · rendered · nowrap · x 0/0
