codex-rs/trace-tui/src/snapshots/codex_trace_tui__phase4_tests__phase4_expanded_events.snap
---
source: trace-tui/src/phase4_tests.rs
expression: "render_app(&mut app, 110, 18)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000-000000000201 / expanded

┌ Records ───────────────────────────────────────────────────────────────────────────────────────────────────┐
│  NAME                             KIND CLASS        STATUS    TIME                 SOURCE   EVIDENCE       │
│  event · group user · ordered     REC  user         —         2026-08-02T00:00:01Z ordinary semantic       │
│▶ event · group user · ordered     REC  user         —         2026-08-02T00:00:02Z ordinary semantic       │
│  event · group user · ordered     REC  user         —         2026-08-02T00:00:03Z ordinary semantic       │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 3/4 visible · 1 hidden · 0 columns omitted · Expanded  jk move  Enter descend  i detail  s json  Tab lens  Es
