codex-rs/trace-tui/src/snapshots/codex_trace_tui__phase4_tests__phase4_structured_scalar.snap
---
source: trace-tui/src/phase4_tests.rs
expression: "render_app(&mut app, 88, 14)"
---
 Codex Trace  read-only · offline │ thread 019d0000-0000-7000-8000-000000000201 / collap

┌ JSON value · /payload/message ───────────────────────────────────────────────────────┐
│first line                                                                            │
│second line                                                                           │
│                                                                                      │
│                                                                                      │
│                                                                                      │
│                                                                                      │
│                                                                                      │
│                                                                                      │
│                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────┘
 jk scroll  PgUp/PgDn page  Esc back  q quit
